<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".CardShowData"
    android:background="@drawable/popup_bg">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="151dp"
        android:layout_height="219dp"
        android:contentDescription="@string/digimon_card"
        android:src="@drawable/img287"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cardSet"
        android:layout_width="162dp"
        android:layout_height="58dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text="@string/name"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text="@string/set"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cardCode" />

    <TextView
        android:id="@+id/cardName"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/cardRarity"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/cardQuantity" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text="@string/code"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cardName" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text="@string/quantity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/cardSet" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text="@string/rarity"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/cardQuantity"
        android:layout_width="81dp"
        android:layout_height="23dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/cardSet" />

    <TextView
        android:id="@+id/cardCode"
        android:layout_width="162dp"
        android:layout_height="23dp"
        android:layout_marginStart="12dp"
        android:text=""
        android:textSize="14sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />


</androidx.constraintlayout.widget.ConstraintLayout>