<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    cardView:cardCornerRadius="8dp"
    cardView:cardUseCompatPadding="true"
    cardView:cardBackgroundColor="#00000000">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardview_bg">

        <ImageView
            android:id="@+id/cardImage"
            android:layout_width="149dp"
            android:layout_height="215dp"
            android:contentDescription="@string/imageDesc"
            android:padding="10dp"
            android:src="@drawable/img287"
            cardView:layout_constraintCircleRadius="10dp"
            cardView:layout_constraintStart_toStartOf="parent"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/cardName"
            android:layout_width="178dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:text="AQUI VA EL NOMBRE"
            android:textSize="16sp"
            android:textStyle="bold"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/code"
            android:textSize="14sp"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/cardName" />

        <TextView
            android:id="@+id/cardCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="CB05/CB05-XX01"
            android:textSize="12sp"
            android:textStyle="italic"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/txtCode" />

        <TextView
            android:id="@+id/txtSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/set"
            android:textSize="14sp"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/cardCode" />

        <TextView
            android:id="@+id/txtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/quantity"
            android:textSize="14sp"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/cardRarity" />

        <TextView
            android:id="@+id/txtRarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/rarity"
            android:textSize="14sp"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/cardSet" />

        <TextView
            android:id="@+id/cardSet"
            android:layout_width="183dp"
            android:layout_height="34dp"
            android:layout_marginStart="15dp"
            android:text="Collaboration Booster (Digimon - Settle it! Card Slash!)"
            android:textSize="12sp"
            android:textStyle="italic"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/txtSet" />

        <TextView
            android:id="@+id/cardRarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="MASTER RARE"
            android:textSize="12sp"
            android:textStyle="italic"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/txtRarity" />

        <TextView
            android:id="@+id/cardQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="1"
            android:textSize="12sp"
            android:textStyle="italic"
            cardView:layout_constraintStart_toEndOf="@+id/cardImage"
            cardView:layout_constraintTop_toBottomOf="@+id/txtQuantity" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>